# V.E.R.S.E

./: .gitignore  README.md
Batch_processing/: Cargo.toml  dataset.csv
Batch_processing/batches/: batch_1.csv  batch_2.csv  batch_3.csv  batch_4.csv  batch_5.csv
Batch_processing/src/: main.rs
Benchmark/ZK-guest/: proof.json
CLI/: Cargo.toml  build-release.sh  install-verse.sh  proof.json
CLI/src/: main.rs
Server/: app.py  requirements.txt
Server/config/: db.py  settings.py
Server/controller/: model.py  user.py
Server/middleware/: logger.py
Server/models/: __init__.py  models.py  user.py
Server/routes/: index.py  model.py  user.py
Server/schemas/: model.py  user.py
Server/utils/: auth.py  file.py  password.py
ZK-guest/: LinearRegression_ID_exported  LinearRegression_exported  guest_copy.elf  guest_elf  guest_id
ZK-guest/host/: Cargo.toml
Zk-host/: Cargo.toml  guest-elf  proof.json
Zk-host/elf/: LinearRegression_exported
Zk-host/src/: main.rs
check/: Cargo.toml  tree-node.py
check/src/: main.rs
current-model/: Cargo.toml  check.py
current-model/src/: main.rs
model-owner/: check.py  iris_decision_tree.pkl  iris_tree.onnx  iris_tree_model.joblib  predict.py  print-nodes.py  print-tree.py  train.py  tree-node.py  tree.json  tree2json.py
models/: train.py
models/models/: iris_tree_copy.onnx  (+1 more)
parse_onnx/: Cargo.toml  tree.json
salai-test/: Cargo.toml
scripts/: bin_tree  flatten.py  iris_tree  iris_tree.1pdf  iris_tree.onnx  onnx-vector.py  print-tree.py  print.py  training.py  visualize.py  visualize_bin.py  visualize_onnx.py
tree-onnx/: iris_tree_model.onnx
trees-circuit/: train.py
verifier/: Cargo.toml  proof.json
web/: package.json
(+35 files in other folders)
