[package]
name = "verse"
version = "0.1.0"
edition = "2024"
authors = ["Salai Kowshikan"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
risc0-zkvm = { version = "^3.0.3" }
