[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^3.0.3"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode="1.3"
rayon = "1.10"
anyhow = "1.0.100"
serde_cbor = "0.11.2"

