[package]
name = "check"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3" 
serde = { version = "1.0", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional: concurrency / lazy statics
lazy_static = "1.4"

# ONNX Runtime
ort = { version = "2.0.0-rc.10" }
#onnxruntime = { version = "0.18.0", features = ["download"] }
ndarray = "0.15"      
anyhow = "1.0"
onnxruntime = "0.0.14"